# neural_wavelet_prt_demo

./: .gitmodules  CMakeLists.txt  README.MD
Renderer/: CMakeLists.txt  CUDABuffer.h  EnvironmentMap.cpp  EnvironmentMap.h  HDRloader.cpp  HDRloader.h  Material.cpp  Material.h  Model.cpp  Model.h  NotUsedCode.cpp  OptixBackend.cpp  OptixBackend.h  OutputVisualizer.cpp  OutputVisualizer.h  OutputWriter.cpp  OutputWriter.h  RenderEngine.cpp  RenderEngine.h  SHRenderer.cpp  SHRenderer.h  Scene.cpp  Scene.h  denoiser.cpp  denoiser.h  files.h  frames.h  main.cpp  npy.h  offlineRenderer.cpp  offlineRenderer.h  optix7.h  table_dist.cpp  table_dist.h  textures.cpp  textures.h  toneMap.cu
Renderer/device_functions/: LaunchParams.h  camera.cu  cameraShRender.cu  cameraShTmatrix.cu  camera_sh_render.cu  constantColorMap.cu  cookTorrance.cu  cubeMap.cu  devicePrograms.cu  disneyBSDF.cu  latlongMap.cu  mathUtils.h  perRayData.h  perRayDataUtils.h  roughPlastic.cu  sgMap.cu  sh.cpp  sh.h  shaderUtils.h  shrots.cpp  simple_ggx.cu
Renderer/tinycudann/: prt_globals.h  prt_network.h  tcnn.cu  utils_kernels.h
common/gdt/: CMakeLists.txt
common/gdt/gdt/: gdt.h
common/gdt/gdt/random/: halton.h
common/glfWindow/: GLFWindow.cpp  GLFWindow.h
